--- a/blog/static/main.css
+++ b/blog/static/main.css
@@ -1,64 +1,63 @@
-* {
+*{
+
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    box-sizing: border-box;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f0f0f0;
+    height: 500px;
 }
+
+
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    box-shadow: 2px 2px 5px 0px;
+    margin: 10px;
+    padding: 10px;
 }
 
-#latest_post, .sub_container {
-    width: 80%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+div{
+
+    margin: 10px;
+    padding: 10px;
+    border-top: 1px solid black;
 }
 
-.sub_container {
-    display: flex;
-    justify-content: space-between;
-}
+h1,h2{
 
-#posts, #categories, #hashtags {
-    width: 30%;
-}
-
-ul {
-    list-style-type: none;
-}
-
-h1, h2 {
     color: brown;
 }
 
-.text_post {
+#latest_post{
+    width: 50%;
+    height: auto;
+    box-shadow: 2px 2px 5px 0px;
+
+
+}
+
+.text_post{
     overflow-y: scroll;
     height: 300px;
 }
 
-.container {
-    width: 80%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
+.sub_container{
+
+    width: 40%;
+    box-shadow: 2px 2px 5px 0px;
+    position: relative;
+    top: -420px;
+    left: 870px;
+    
+
+}
+
+.container{
+
+    position: relative;
+    box-shadow: 2px 2px 5px 0px;
+    top: -300px;
+
 }
